# monopoly

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.docker/: entrypoint.sh
.docker/powerlevel10k/: .p10k.zsh
src/: config.py  log.py  main.py  utils.py  view.py
src/domain/: board.py  estate.py  game.py
src/domain/player/: __behavior_enum.py  __init__.py  __player_abstract.py  __player_factory.py  player_impulsive.py  player_picky.py  player_random.py  player_wary.py
tests/domain/: test_board.py  test_estate.py  test_player.py
