[project]
name = "Monopoly Game"
version = "0.1.0"
description = "Hypothetical game based on Monopoly game"
authors = [
    {name = "Joe Rabelo", email = "joerabelo@gmail.com"},
]
dependencies = []
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "pre-commit>=2.20.0",
    "black>=22.10.0",
    "pytest>=7.1.3",
    "ipython>=8.5.0",
]
